--- a/dashboard.html
+++ b/dashboard.html
@@ -25,6 +25,7 @@
       <button type="button" onclick="exportarDados()">💾 Exportar Dados</button>
       <input type="file" id="importar-arquivo" accept=".json,application/json" style="display:none" onchange="importarDados(event)" />
       <button type="button" onclick="document.getElementById('importar-arquivo').click()">📥 Importar Dados</button>
+	      <button type="button" onclick="gerarTemplateImportacao()">📄 Gerar Modelo Importação</button>
       <button type="button" class="btn-danger" onclick="logout()">Sair</button>
     </div>
   </header>
