--- a/boletos.html
+++ b/boletos.html
@@ -39,8 +39,17 @@
   </header>
 
   <main id="boletos-root">
-    <div style="padding:20px;color:#555">
-      Carregando boletos… se esta mensagem não sumir, verifique se o arquivo <code>script.js</code> está sendo encontrado.
+    <!-- Capa Frontal (Gerada pelo JS) -->
+    <section id="capa-frontal" class="capa-page"></section>
+
+    <!-- Capa Verso (Página em branco) -->
+    <section id="capa-verso" class="capa-page"></section>
+
+    <!-- Boletos (Gerados pelo JS) -->
+    <div id="boletos-container">
+      <div style="padding:20px;color:#555">
+        Carregando boletos… se esta mensagem não sumir, verifique se o arquivo <code>script.js</code> está sendo encontrado.
+      </div>
     </div>
   </main>
 
