--- a/bloco.html
+++ b/bloco.html
@@ -111,6 +111,10 @@
 
  <main id="bloco-detalhes" class="conteudo">
     <div class="calculator-container">
+	      <div class="input-group">
+	        <label for="contaSabesp">Valor da Conta Sabesp (R$):</label>
+	        <input type="number" id="contaSabesp" step="0.01" placeholder="Ex: 1500.00" onchange="salvarContaSabesp();" />
+	      </div>
       <h2>Calculadora de Conta de Água</h2>
       <p>Preencha os campos abaixo para calcular o valor da sua conta.</p>
 
