--- a/bloco.html
+++ b/bloco.html
@@ -109,6 +109,15 @@
     </div>
   </div>
 
+<div class="calculator-container">
+    <div class="input-group">
+        <label for="contaSabesp">Valor da Conta Sabesp (R$):</label>
+        <input type="number" id="contaSabesp" step="0.01" placeholder="Ex: 1500.00" onchange="salvarContaSabesp();" />
+    </div>
+    <h2>Calculadora de Conta de Água</h2>
+    <!-- ... restante do código ... -->
+</div>
+	
  <main id="bloco-detalhes" class="conteudo">
     <div class="calculator-container">
 	      <div class="input-group">
