--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,13 @@
     </div>
   </header>
 
-  <main id="blocos-container"></main>
+  <main id="blocos-container">
+    <div class="bloco-item extra-function" onclick="window.location.href='recibo.html'">
+      <h3>Gerador de Recibo</h3>
+      <p>Clique para gerar um recibo de pagamento.</p>
+      <p>Função extra para o síndico.</p>
+    </div>
+  </main>
   <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
   <script src="script.js"></script>
 </body>
