--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Login Seguro | Leitura de Hidrômetro</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="logorecibo.png" type="image/png">
 </head>
 <body>
   <main class="login-container">
@@ -25,7 +26,7 @@
     <p id="login-error" class="error" aria-live="polite"></p>
 
     <footer style="margin-top: 16px; font-size: 0.85rem; color: #666;">
-      <p>Login padrão: <strong>admin / 1234</strong></p>
+      <p>Acesse o sistema com suas credenciais.</p>
     </footer>
   </main>
 
