--- a/dashboard.html
+++ b/dashboard.html
@@ -38,41 +38,39 @@
 
   <main id="blocos-container">
     <div id="calculator-container" class="calculator-container" style="display:none;">
-		      <h2>Calculadora de Conta de Água</h2>
-		      <p>Preencha os campos abaixo para calcular o valor da sua conta.</p>
-	
-		      <div class="input-group">
-		        <label for="consumo">Consumo (m³):</label>
-		        <input type="number" id="consumo" placeholder="Ex: 15" onchange="calcularValor(); atualizarTextoExplicativo();" />
-		      </div>
-	
-		      <div class="input-group">
-		        <label for="valorMinimo">Valor Mínimo (R$):</label>
-		        <input type="number" id="valorMinimo" step="0.01" value="68.40" onchange="calcularValor(); atualizarTextoExplicativo();" />
-		      </div>
-	
-		      <div class="input-group">
-		        <label for="valorM3">Valor por m³ excedente (R$):</label>
-		        <input type="number" id="valorM3" step="0.01" value="8.59" onchange="calcularValor(); atualizarTextoExplicativo();" />
-		      </div>
-	
-		      <div class="input-group">
-		        <label for="valorTotal">Total a pagar (R$):</label>
-		        <input type="text" id="valorTotal" readonly />
-		      </div>
+			      <h2>Calculadora de Conta de Água</h2>
+			      <p>Preencha os campos abaixo para calcular o valor da sua conta.</p>
+		
+			      <div class="input-group">
+			        <label for="consumo">Consumo (m³):</label>
+			        <input type="number" id="consumo" placeholder="Ex: 15" onchange="calcularValor(); atualizarTextoExplicativo();" />
+			      </div>
+		
+			      <div class="input-group">
+			        <label for="valorMinimo">Valor Mínimo (R$):</label>
+			        <input type="number" id="valorMinimo" step="0.01" value="68.40" onchange="calcularValor(); atualizarTextoExplicativo();" />
+			      </div>
+		
+			      <div class="input-group">
+			        <label for="valorM3">Valor por m³ excedente (R$):</label>
+			        <input type="number" id="valorM3" step="0.01" value="8.59" onchange="calcularValor(); atualizarTextoExplicativo();" />
+			      </div>
+		
+			      <div class="input-group">
+			        <label for="valorTotal">Total a pagar (R$):</label>
+			        <input type="text" id="valorTotal" readonly />
+			      </div>
 
           <div id="textoExplicativo" class="result-box"></div>
 
           <div>
-		      <a id="whatsappLink" href="#" target="_blank">
-		        <button>Enviar cálculo via WhatsApp</button>
-		      </a>
+			      <a id="whatsappLink" href="#" target="_blank">
+			        <button>Enviar cálculo via WhatsApp</button>
+			      </a>
+			    </div>
 		    </div>
-	    </div>
-    <div class="bloco-item extra-function" onclick="window.location.href='recibo.html'">
-      <h3>Gerador de Recibo</h3>
-      <p>Clique para gerar um recibo de pagamento.</p>
-      <p>Função extra para o síndico.</p>
+    <div id="lista-blocos">
+
     </div>
   </main>
   <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
