--- a/recibo.html
+++ b/recibo.html
@@ -440,8 +440,8 @@
 
     document.getElementById("reciboContainer").style.display = "block";
     
-    // 5. Sugerir a impressão
-    window.print();
+	    // 5. Não sugere a impressão automática, apenas exibe o recibo.
+	    // A impressão automática foi removida para permitir que o usuário interaja com os botões.
   }
 
   // Função auxiliar para formatar o mês (copiada do script.js)
