--- a/dashboard.html
+++ b/dashboard.html
@@ -26,10 +26,10 @@
       <button type="button" onclick="criarBloco()">+ Adicionar Bloco</button>
       <button type="button" onclick="toggleCalculadora()">🧮 Calculadora</button>
       
-      <button type="button" onclick="exportarDados()">💾 Exportar Dados</button>
-      <input type="file" id="importar-arquivo" accept=".json,application/json" style="display:none" onchange="importarDados(event)" />
-      <button type="button" onclick="document.getElementById('importar-arquivo').click()">📥 Importar Dados</button>
-	      <button type="button" onclick="gerarTemplateImportacao()">📄 Gerar Modelo Importação</button>
+      <button type="button" onclick="exportarDadosJSON()">💾 Exportar Dados (JSON)</button>
+      <input type="file" id="import-json-input" accept=".json" onchange="importarDadosJSON(event)" style="display: none;">
+      <button type="button" onclick="acionarImportacaoJSON()">📥 Importar Dados (JSON)</button>
+		      <button type="button" onclick="gerarTemplateImportacao()">📄 Gerar Modelo Importação</button>
       <button type="button" onclick="abrirModalAlterarSenha()">🔑 Alterar Senha</button>
       <button type="button" class="btn-danger" onclick="logout()">Sair</button>
       <button type="button" class="btn-danger" onclick="hardResetConfirm()">⚠️ Hard Reset</button>
@@ -37,6 +37,7 @@
   </header>
 
   <main id="blocos-container">
+    <div id="storage-counter" style="text-align: center; margin-bottom: 10px; font-size: 0.9em; color: #666;"></div>
     <div id="calculator-container" class="calculator-container" style="display:none;">
 			      <h2>Calculadora de Conta de Água</h2>
 			      <p>Preencha os campos abaixo para calcular o valor da sua conta.</p>
