--- a/bloco.html
+++ b/bloco.html
@@ -108,10 +108,35 @@
       <button type="button" onclick="document.getElementById('importar-leitura-arquivo').click()">📥 Importar Leitura Atual (XLSX)</button>
       <button type="button" class="btn-danger" onclick="resetarBlocoPerguntar()">🗑️ Resetar Bloco</button>
       <button type="button" onclick="(function(){ const id=new URLSearchParams(location.search).get('id'); location.href='boletos.html?id='+encodeURIComponent(id||'0'); })()">🧾 Boletos (imprimir)</button>
+	      <button type="button" onclick="abrirModalSalvarHistorico()">💾 Salvar Leitura do Mês</button>
+	      <button type="button" onclick="abrirModalImportarHistorico()">📥 Importar Histórico (XLSX)</button>
     </div>
   </div>
 
  <main id="bloco-detalhes" class="conteudo">
+	    <!-- Modal de Salvar Histórico -->
+	    <div id="modal-salvar-historico" class="modal" style="display:none;">
+	      <div class="modal-content">
+	        <span class="close-button" onclick="fecharModalSalvarHistorico()">&times;</span>
+	        <h2>Salvar Leitura no Histórico</h2>
+	        <p>Selecione o mês ao qual esta leitura se refere:</p>
+	        <input type="month" id="mes-salvar-historico" required>
+	        <button onclick="salvarLeituraDoMesComSelecao()">Salvar Leitura</button>
+	      </div>
+	    </div>
+	
+	    <!-- Modal de Importar Histórico -->
+	    <div id="modal-importar-historico" class="modal" style="display:none;">
+	      <div class="modal-content">
+	        <span class="close-button" onclick="fecharModalImportarHistorico()">&times;</span>
+	        <h2>Importar Histórico de Leitura</h2>
+	        <p>Selecione o mês ao qual o arquivo de histórico se refere:</p>
+	        <input type="month" id="mes-importar-historico" required>
+	        <input type="file" id="importar-historico-arquivo" accept=".xlsx" onchange="importarHistoricoLeitura(event)" style="display:none;" />
+	        <button onclick="document.getElementById('importar-historico-arquivo').click()">Selecionar Arquivo XLSX</button>
+	        <p style="margin-top: 10px;">* O arquivo deve seguir o formato de exportação de leitura.</p>
+	      </div>
+	    </div>
 		  </main>
 
   <!-- Modal de Captura de Foto -->
