--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
   <title>Dashboard | Leitura de Hidrômetro</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="logorecibo.png" type="image/png">
+  <link rel="icon" href="logorecibo.webp" type="image/png">
 </head>
 <body>
   <script>
@@ -116,7 +116,7 @@
 	      <div class="recibo-container" id="reciboContainer">
 	        <div class="recibo-numero" id="reciboNumero">Recibo nº 01</div>
 	        <div class="recibo-logo">
-	          <img src="logorecibo.png" alt="Logo" />
+	          <img src="logorecibo.webp" alt="Logo" />
 	        </div>
 	        <div class="recibo-header">
 	          <span>Recibo de Pagamento</span>
@@ -128,7 +128,7 @@
 	        <div class="assinatura">
 	          <div class="recibo-footer" id="reciboData"></div>
 	          <div class="assinatura-wrapper">
-	            <img src="assinatura.png" alt="Assinatura" class="assinatura-img" />
+	            <img src="assinatura.webp" alt="Assinatura" class="assinatura-img" />
 	            <hr />
 	            <strong>RAFAEL WANDERLEY MELO</strong><br />
 	            <small>(15) 9 9793-9699</small>
