--- a/boletos.html
+++ b/boletos.html
@@ -12,7 +12,7 @@
   <title>Boletos | Leitura de Hidrômetro</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="logorecibo.png" type="image/png">
+  <link rel="icon" href="logorecibo.webp" type="image/png">
 </head>
 <body class="boletos-body">
   <script>
