--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Login Seguro | Leitura de Hidrômetro</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="logorecibo.png" type="image/png">
+  <link rel="icon" href="logorecibo.webp" type="image/png">
 </head>
 <body>
   <main class="login-container">
